--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sistema de apresentação do applytics e dashboard analytcs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node .\\node_modules\\mocha\\bin\\mocha",
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,14 +19,26 @@
   "homepage": "https://github.com/gm1357/Applytics#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
     "express-validator": "^5.2.0",
-    "method-override": "^3.0.0"
+    "jquery": "^3.3.1",
+    "method-override": "^3.0.0",
+    "popper.js": "^1.14.3"
   },
   "devDependencies": {
+    "autoprefixer": "^9.0.0",
+    "css-loader": "^1.0.0",
+    "exports-loader": "^0.7.0",
     "mocha": "^5.2.0",
-    "supertest": "^3.1.0"
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "supertest": "^3.1.0",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8"
   }
 }
