--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.2",
+    "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
     "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
+    "mysql": "^2.16.0",
     "popper.js": "^1.14.3",
     "serve-favicon": "^2.5.0"
   },
