Feito mais alguns ajustes para a autenticação de usuarios

--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
+    "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
+    "npm": "^6.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.3",
