--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.3",
+    "request": "^2.87.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
