--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
-    "mysql": "^2.16.0",
     "npm": "^6.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
