--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.2",
+    "chart.js": "^2.7.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
