--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.2",
-    "chart.js": "^2.7.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
@@ -38,6 +37,7 @@
     "express-load": "^1.1.16",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
+    "highcharts": "^6.1.1",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
