--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.3",
     "request": "^2.87.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "tags-input": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.0.0",
