--- a/package.json
+++ b/package.json
@@ -32,18 +32,19 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
-    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
+    "handlebars": "^4.0.11",
+    "hbs": "^4.0.1",
     "highcharts": "^6.1.1",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
-    "npm": "^6.2.0",
+    "npm": "^6.4.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.3",
