--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bootstrap": "^4.1.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "datatables.net-bs4": "^1.10.19",
+    "datatables.net-responsive-bs4": "^2.2.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
