--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "handlebars": "^4.0.11",
     "hbs": "^4.0.1",
     "highcharts": "^6.1.1",
+    "intro.js": "^2.9.3",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
