--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "applytics",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.11.3"
+  },
   "description": "Sistema de apresentação do applytics e dashboard analytcs",
   "main": "index.js",
   "scripts": {
@@ -67,6 +70,6 @@
     "style-loader": "^0.21.0",
     "supertest": "^3.1.0",
     "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.1.0"
   }
 }
